test/1.2/errors/T_ESYNTAX_13.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

/// ERROR ESYNTAX
method foo(void * ) {
}
